--- a/src/index.css
+++ b/src/index.css
@@ -250,7 +250,7 @@ transition: background-color 0.3s ease;
 }
 
 .meal-item button:hover {
-background-color: #e0b60e;
+background-color: #a7870a;
 }
 
 .meal-item {
