--- a/src/index.css
+++ b/src/index.css
@@ -438,7 +438,7 @@ font-size: 20px;
 font-weight: bold;
 text-align: right;
 margin: 20px 0;
-color: #007bff;
+color: #977b0a67;
 }
 
 .cart-modal .modal-actions {
@@ -451,14 +451,14 @@ gap: 10px;
 padding: 10px;
 font-size: 16px;
 color: white;
-background-color: #007bff;
+background-color: #977b0a;
 border: none;
 border-radius: 4px;
 cursor: pointer;
 }
 
 .cart-modal .modal-actions button:hover {
-background-color: #0056b3;
+  background-color: #aa8a0a;
 }
 
 .close {
@@ -491,14 +491,14 @@ margin-top: 10px;
 padding: 5px 10px;
 font-size: 16px;
 color: white;
-background-color: #007bff;
+background-color: #977b0a;
 border: none;
 border-radius: 4px;
 cursor: pointer;
 }
 
 .cart-item-actions button:hover {
-background-color: #0056b3;
+  background-color: #b6940b;
 }
 
 .cart-item-actions span {
