--- a/src/index.css
+++ b/src/index.css
@@ -609,14 +609,14 @@ gap: 10px;
 padding: 10px;
 font-size: 16px;
 color: white;
-background-color: #007bff;
+background-color: #977b0a;
 border: none;
 border-radius: 4px;
 cursor: pointer;
 }
 
 .modal-actions button:hover {
-background-color: #0056b3;
+  background-color: #c29d0a;
 }
 
 
